@@ -8,6 +8,8 @@
 * German translation updated.
 * Updated the appearance of the network settings.
 * Updated the table creation process dropping use of dbDelta() due to its restrictions (can't handle IF NOT EXISTS).
+* Fixed an issue related to cache and switching to a blog when neither wp_cache_switch_to_blog() nor wp_cache_reset()
+  are implemented, like in WP Engine's object-cache.php which does provide wp_cache_flush().
 
 = 2.2.0 =
 * Important change in this version: If access restrictions for post type are disabled, related entries will not be protected anymore.
